# ChangeLog for sci-electronics/electric
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/electric/ChangeLog,v 1.39 2010/02/17 21:54:45 calchan Exp $

*electric-8.11 (17 Feb 2010)

  17 Feb 2010; <calchan@gentoo.org> +electric-8.11.ebuild:
  Version bump, bug #305643.

  17 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> -electric-7.00.ebuild:
  Remove old based on http://bugs.gentoo.org/show_bug.cgi?id=299455#c1.

  17 Jan 2010; Christian Faulhammer <fauli@gentoo.org> electric-8.09.ebuild:
  stable x86, bug 299455

*electric-8.10 (12 Jan 2010)

  12 Jan 2010; Denis Dupeyron <calchan@gentoo.org> -electric-8.04.ebuild,
  -electric-8.05.ebuild, -electric-8.06.ebuild, +electric-8.10.ebuild:
  Version bump, see bug #300535. Cleanup.

  12 Jan 2010; nixnut <nixnut@gentoo.org> electric-8.09.ebuild:
  ppc stable #299455

  07 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> electric-8.09.ebuild:
  amd64 stable wrt #299455

  17 Nov 2009; Denis Dupeyron <calchan@gentoo.org> electric-8.09.ebuild:
  Added dependency to electronics-menu. Updated desktop entry.

*electric-8.09 (04 Nov 2009)

  04 Nov 2009; Denis Dupeyron <calchan@gentoo.org> +electric-8.09.ebuild:
  Version bump, thanks to Rafael Goncalves Martins.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> electric-7.00.ebuild:
  Remove virtual/libc

  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> electric-7.00.ebuild:
  QA: Get rid of deprecated qt_min_version().

  27 Jun 2008; Ulrich Mueller <ulm@gentoo.org> electric-7.00.ebuild:
  Change dependency from virtual/motif to x11-libs/openmotif, bug 224749.

*electric-8.06 (21 Apr 2008)

  21 Apr 2008; Denis Dupeyron <calchan@gentoo.org> +electric-8.06.ebuild:
  Version bump.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> electric-8.04.ebuild,
  electric-8.05.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.
