@@ -1,6 +1,12 @@
 # ChangeLog for sci-electronics/electric
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/electric/ChangeLog,v 1.39 2010/02/17 21:54:45 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/electric/ChangeLog,v 1.40 2010/12/11 21:41:33 rafaelmartins Exp $
+
+*electric-9.00 (11 Dec 2010)
+
+  11 Dec 2010; Rafael G. Martins <rafaelmartins@gentoo.org>
+  +electric-9.00.ebuild:
+  Version bump.
 
 *electric-8.11 (17 Feb 2010)
 
